--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,192 @@
-.container {
-  padding: 0 2rem;
+.header {
+  /* background-color: gainsboro; */
+  display: flex;
+  padding: 35px;
+  /* position: fixed; */
+  width: 100%;
+  height: 14vh;
+  justify-content: space-between;
+  counter-reset: a;
+  align-items: center;
+  background-color: #fffa;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  top:0;
+  transition: top 0.4s;
+  /* box-shadow: #0002 0px 4px 12px; */
+  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
 }
-
+.header nav {
+  /* font-family: monospace; */
+  /* align-self: center; */
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  /* margin-right: 20px; */
+}
+.navButton {
+  /* margin: 0 20px; */
+  font-weight: bold;
+  transition: 0.4s;
+  font-size: 18px;
+}
+.navButton:hover {
+  color: red;
+}
+.downloadButton {
+  border: 2px solid red;
+  padding: 10px;
+  border-radius: 5px;
+  color: red;
+  font-weight: bold;
+  transition: 0.4s;
+}
+.downloadButton:hover{
+  background-color: #f003;
+}
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  margin: 0 auto;
+  position: absolute;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  top: 0;
+  left:10%;
+  right:10%;
+  z-index: -1;
 }
-
-.footer {
+.aboutSection {
+  height: 100vh;
+  /* background-color: red; */
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
 }
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.aboutLeftDiv {
+  /* background-color: blue; */
+  height: fit-content;
+  flex-grow: 1;
+  margin-right: 20px;
+  /* background-color: red; */
+}
+.aboutLeftDiv h1 {
+  font-size: 70px;
+  /* background-color: red; */
+  margin:10px 0;
+}
+.aboutLeftDiv h2 {
+  font-size: 70px;
+  margin:0;
+  color: #000a;
+}
+.aboutLeftDiv h4 {
+  color: red;
+  letter-spacing: 1.5px;
+  margin:0;
+}
+.aboutRightDiv {
+  height: fit-content;
   flex-grow: 1;
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
+.aboutImageContainer {
+  background-color: yellow;
+  width: 300px;
+  height: 300px;
+  transition: 0.3s;
+  position: relative;
   border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  filter: grayscale();
+  overflow: hidden;
 }
-
-.grid {
+.aboutImageContainer:hover{
+  background-color: red;
+  filter: none;
+}
+.aboutImageOutline {
+  border: 3px solid red;
+  border-radius: 5px;
+  position: relative;
+  left:20px;
+  top:20px;
+  width: 300px;
+  height: 300px;
+  transition: 0.3s;
+  margin-top: -100%;
+  z-index: -1;
+}
+.aboutImageContainer:hover + .aboutImageOutline{
+  position:relative;
+  left: 10px;
+  top: 10px;
+}
+.projectsSection {
+  margin: 0 10%;
+}
+.projectContainer {
+  /* background-color: purple; */
+  /* display: flex; */
+  display: grid;
+  grid-template: 1fr / 1fr;
+  align-items:center;
+  margin-bottom: 100px;
+}
+.projectContainer > * {
+  grid-column: 1/1;
+  grid-row: 1/1;
+}
+.projectImageContainer {
+  width: 60%;
+  height: 400px;
+  position: relative;
+  z-index: 1;
+  border-radius: 4px;
+  overflow: hidden;
+}
+.projectDescription {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 2;
+  margin: 20px 0;
+  margin-left: 30%;
 }
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+.projectContainer:nth-child(even) {
+  justify-items: end;
 }
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.projectContainer:nth-child(even) .projectDescription {
+  margin-left:0;
+  margin-right: 30%;
+  align-items: flex-start;
 }
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
+.projectDescription > p {
+  background-color: lightskyblue;
+  padding: 20px;
+  text-align: right;
+  border-radius: 4px;
   line-height: 1.5;
+  font-size: 1.2rem;
 }
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.projectContainer:nth-child(even) p {
+  text-align: left;
 }
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.projectDescription > h1 {
+  margin: 0;
+  /* margin-top: 40px; */
+  font-size: 2rem;
+}
+.projectTechnologies {
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 20px;
+  padding: 0;
+  gap: 20px;
+  list-style-type: none;
+}
+.projectButtons {
+  display: flex;
+  gap: 20px;
+}
+.projectButtons > a {
+  background-color: gainsboro;
+  padding: 5px 10px;
+  border-radius: 4px;
 }
