--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@page {
+  margin: 0px;
+}
+/* @layer base {
+  * {
+    @apply box-border;
+  }
+} */
